2010-06-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14737: htmlArea RTE: Missing labels for SelectFont extension
	* Fixed bug #14738: htmlArea RTE: Cleaning dead scripts

2010-06-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14723: htmlArea RTE: JS errors block RTE usage in IE6 and IE7 (Thanks to Jo Hasenau)
	* Follow-up to bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments
	* Updated htmlArea RTE version to 2.0.0

2010-06-14  Peter Niederlag  <netservice@niekom.de>

	* Cleanup, #14660: add hint on required rewrite for compression in config_default.php

2010-06-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11447: Unwanted control fields exported in CSV file (Thanks to Andreas Lappe)

2010-06-14  Benjamin Mack  <benni@typo3.org>

	* Followup to #14324: Feature: Add spriteGeneratorAPI to support the new sprite-icon-api - Renamed array, added functionality to add TCA type icons from Extensions, allow changes in core icons to trigger cache clearing (Thanks to Steffen Ritter)
	* Followup to #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend - Typo in IRRE (Thanks to Steffen Gebert)

2010-06-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14716: Version module don't display Title
	* Fixed bug #14236: logging into the Install Tool gives an alert (Thanks to Steffen Gebert)
	* Added missing flags #11461: Serbian flag in sys_language selector 
	* Added missing flags #11807: Flags for belgium is missing
	* Fixed bug #14708: Version selector looks cryptic
	* Fixed bug #14354: Bug: fix percentage of changes in Workspace Manager -> "Show differences inline" (Thanks to Marco Huber)
	* Reverted revision 7901:  #14467: Code cleanup: t3lib_iconWorks::getIconImage is not needed anymore

2010-06-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14640: Improve cookie detection at login screen (Thanks to Steffen Gebert)
	* Fixed bug #14565: There is no way to disable compress and concatenate