@@ -146,7 +146,6 @@
 }
 .htmlarea .toolbar .select {
 	color: WindowText;
-	height: 18px;
 	margin: 0 0 4px 0;
 }
 .htmlarea .toolbar .x-form-item label.x-form-item-label{
